WIP : fix spacing issue in sign-up line
Changes to be committed:
	modified:   webapp/static/css/components/loginCard.css
	modified:   webapp/static/js/components/LoginCard.js

--- a/webapp/static/css/components/loginCard.css
+++ b/webapp/static/css/components/loginCard.css
@@ -75,3 +75,8 @@
 	text-decoration: none;
 }
 
+#btn_signup
+{
+	margin-left: 0.5rem;
+}
+
